FEC-1439 #message Fix z-index priority for second screen

--- a/modules/KalturaSupport/components/dualScreen/displayControlBar.css
+++ b/modules/KalturaSupport/components/dualScreen/displayControlBar.css
@@ -45,6 +45,10 @@ ul.inline>li, ol.inline>li {
 
 }
 
+.secondScreen{
+    z-index: 2;
+}
+
 .hiddenScreen{
     top: 0px !important;
     left: 0px !important;
